Fix levels squishing on mobile chromium

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -161,7 +161,6 @@ div.level {
 	background-color: $bg_box2;
 	display: inline-block;
 	position: relative;
-	overflow: clip;
 	width: 230px;
 	height: 200px;
 	padding: 3px;
